Moving nodes in the node editor stops after hotkey is lifted #70504

Closed
opened 2019-10-04 05:16:39 +02:00 by Matthew Wiebe · 10 comments

Blender Version
Broken: 540eb2dc1e
Worked: 540eb2dc1e^

Short description of error

The behavior in the node editors has changed. Whereas before you could move a node with G > Confirm, now the user has to hold down the G key to move. Releasing G causes the translate operator to stop.

More details

Any hotkey that results in nodes in the node editor (both shader editor and compositor) moving with the mouse now stops the movement as soon as the keyboard key is lifted, as opposed to continuing to move until mousebutton1 is pressed (which is/was the behaviour elsewhere in blender and in the node editor in the past iirc).

Examples are obviously G but also Shift+D (nodes created by duplication stop moving as soon as the D key is released)
strangely Shift+A does not have this problem, any new nodes that are added (but not made by duplicating) continue to move with the mouse as expected.

This makes the node editors almost unuseable for users accustomed to using hotkeys

**Blender Version** Broken: 540eb2dc1e Worked: 540eb2dc1e^ **Short description of error** The behavior in the node editors has changed. Whereas before you could move a node with G > Confirm, now the user has to hold down the G key to move. Releasing G causes the translate operator to stop. **More details** Any hotkey that results in nodes in the node editor (both shader editor and compositor) moving with the mouse now stops the movement as soon as the keyboard key is lifted, as opposed to continuing to move until mousebutton1 is pressed (which is/was the behaviour elsewhere in blender and in the node editor in the past iirc). Examples are obviously G but also Shift+D (nodes created by duplication stop moving as soon as the D key is released) strangely Shift+A does *not* have this problem, any new nodes that are added (but not made by duplicating) continue to move with the mouse as expected. This makes the node editors almost unuseable for users accustomed to using hotkeys
Author

Added subscriber: @cerebral

Added subscriber: @cerebral

#70533 was marked as duplicate of this issue

#70533 was marked as duplicate of this issue

#70518 was marked as duplicate of this issue

#70518 was marked as duplicate of this issue
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Member

Caused by 540eb2dc1e, @brecht: for mouse tweak this seemed fine, but not for keyboard
How about this instead?
P1126: #70504 snippet



diff --git a/source/blender/editors/space_node/node_ops.c b/source/blender/editors/space_node/node_ops.c
index 5874b6d1cc0..11933ef0811 100644
--- a/source/blender/editors/space_node/node_ops.c
+++ b/source/blender/editors/space_node/node_ops.c
@@ -143,7 +143,6 @@ void ED_operatormacros_node(void)
                                     "Move nodes and attach to frame",
                                     OPTYPE_UNDO | OPTYPE_REGISTER);
   mot = WM_operatortype_macro_define(ot, "TRANSFORM_OT_translate");
-  RNA_boolean_set(mot->ptr, "release_confirm", true);
   WM_operatortype_macro_define(ot, "NODE_OT_attach");
   WM_operatortype_macro_define(ot, "NODE_OT_insert_offset");
 
@@ -153,7 +152,6 @@ void ED_operatormacros_node(void)
                                     "Move nodes and attach to frame",
                                     OPTYPE_UNDO | OPTYPE_REGISTER);
   mot = WM_operatortype_macro_define(ot, "TRANSFORM_OT_translate");
-  RNA_boolean_set(mot->ptr, "release_confirm", true);
   RNA_boolean_set(mot->ptr, "remove_on_cancel", true);
   WM_operatortype_macro_define(ot, "NODE_OT_attach");
   WM_operatortype_macro_define(ot, "NODE_OT_insert_offset");
diff --git a/source/blender/editors/transform/transform_generics.c b/source/blender/editors/transform/transform_generics.c
index 083b5b94c48..2f77b0453a4 100644
--- a/source/blender/editors/transform/transform_generics.c
+++ b/source/blender/editors/transform/transform_generics.c
@@ -1707,7 +1707,7 @@ void initTransInfo(bContext *C, TransInfo *t, wmOperator *op, const wmEvent *eve
     }
   }
   else {
-    if (ISMOUSE(t->launch_event) && (U.flag & USER_RELEASECONFIRM)) {
+    if (ISMOUSE(t->launch_event) && ((U.flag & USER_RELEASECONFIRM) || (t->spacetype == SPACE_NODE))) {
       /* Global "release confirm" on mouse bindings */
       t->flag |= T_RELEASE_CONFIRM;
     }
Caused by 540eb2dc1e, @brecht: for mouse tweak this seemed fine, but not for keyboard How about this instead? [P1126: #70504 snippet](https://archive.blender.org/developer/P1126.txt) ``` diff --git a/source/blender/editors/space_node/node_ops.c b/source/blender/editors/space_node/node_ops.c index 5874b6d1cc0..11933ef0811 100644 --- a/source/blender/editors/space_node/node_ops.c +++ b/source/blender/editors/space_node/node_ops.c @@ -143,7 +143,6 @@ void ED_operatormacros_node(void) "Move nodes and attach to frame", OPTYPE_UNDO | OPTYPE_REGISTER); mot = WM_operatortype_macro_define(ot, "TRANSFORM_OT_translate"); - RNA_boolean_set(mot->ptr, "release_confirm", true); WM_operatortype_macro_define(ot, "NODE_OT_attach"); WM_operatortype_macro_define(ot, "NODE_OT_insert_offset"); @@ -153,7 +152,6 @@ void ED_operatormacros_node(void) "Move nodes and attach to frame", OPTYPE_UNDO | OPTYPE_REGISTER); mot = WM_operatortype_macro_define(ot, "TRANSFORM_OT_translate"); - RNA_boolean_set(mot->ptr, "release_confirm", true); RNA_boolean_set(mot->ptr, "remove_on_cancel", true); WM_operatortype_macro_define(ot, "NODE_OT_attach"); WM_operatortype_macro_define(ot, "NODE_OT_insert_offset"); diff --git a/source/blender/editors/transform/transform_generics.c b/source/blender/editors/transform/transform_generics.c index 083b5b94c48..2f77b0453a4 100644 --- a/source/blender/editors/transform/transform_generics.c +++ b/source/blender/editors/transform/transform_generics.c @@ -1707,7 +1707,7 @@ void initTransInfo(bContext *C, TransInfo *t, wmOperator *op, const wmEvent *eve } } else { - if (ISMOUSE(t->launch_event) && (U.flag & USER_RELEASECONFIRM)) { + if (ISMOUSE(t->launch_event) && ((U.flag & USER_RELEASECONFIRM) || (t->spacetype == SPACE_NODE))) { /* Global "release confirm" on mouse bindings */ t->flag |= T_RELEASE_CONFIRM; } ```
Member

Added subscribers: @JasonvanGumster, @dfelinto

Added subscribers: @JasonvanGumster, @dfelinto
Brecht Van Lommel was assigned by Dalai Felinto 2019-10-04 15:04:52 +02:00

@lichtwerk you can commit that. I tried to see if there is a better solution but couldn't find a good one, macros really should have some way to pass along operator properties.

@lichtwerk you can commit that. I tried to see if there is a better solution but couldn't find a good one, macros really should have some way to pass along operator properties.

This issue was referenced by 295f888433

This issue was referenced by 295f8884336c6e4a3eb58cacb70ca3eb662a866f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @cheteron

Added subscriber: @cheteron
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70504
No description provided.