Fix T70504: Moving nodes in the node editor stops after hotkey is lifted

This basically reverts 540eb2dc1e57 for an alternative solution that
only enforforces release_confirm [ignoring the preference] on mouse for
the node editor.

Approved by @brecht in T70504.